samples/_failures_safe/1761528832_dc308e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c380bcf4.c: In function ‘main’:
./samples/SAFE/__tmp_c380bcf4.c:158:41: error: expected ‘)’ at end of input
  158 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_c380bcf4.c:158:21: error: too few arguments to function ‘print_matrix’
  158 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c380bcf4.c:58:6: note: declared here
   58 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_c380bcf4.c:158:21: error: expected declaration or statement at end of input
  158 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c380bcf4.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c380bcf4.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c380bcf4.c:158:21: error: expected declaration or statement at end of input
